yaml/registry/registry.namespace.yaml
{
  "kind": "Namespace",
  "apiVersion": "v1",
  "metadata": {
    "name": "registry",
    "labels": {
      "name": "registry"
    }
  }
}
