yaml/registry/registry.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry
    spec:
      volumes:
        - name: config
          configMap:
            name: registry
            items:
              - key: registry-config.yml
                path: config.yml
        - name: htpasswd
          secret:
            secretName: registry
            items:
            - key: HTPASSWD
              path: htpasswd
        - name: registry-images-pv
          persistentVolumeClaim:
            claimName: registry-images-pv-claim

      containers:
        - name: registry
          image: registry:2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config
              mountPath: /etc/docker/registry
              readOnly: true
            - name: htpasswd
              mountPath: /auth
              readOnly: true
            - name: registry-images-pv
              mountPath: /var/lib/registry
              subPath: registry-images
