yaml/registry/ingress-nginx.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  namespace: registry
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: registry
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: registry
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
