yaml/registry/letsencrypt.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: letsencrypt
  namespace: registry
spec:
  selector:
    app: letsencrypt
  ports:
  - protocol: "TCP"
    port: 80
