yaml/registry/registry.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: registry
  namespace: registry
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-staging"

spec:
  # tls:
  # - hosts:
  #   - example.example.com
  #   secretName: registry-tls
  rules:
  # - host: example.example.com
    - http:
        paths:
        - path: /
          backend:
            serviceName: registry
            servicePort: 5000
      # - path: /.well-known/acme-challenge/
      #   backend:
      #     serviceName: letsencrypt
      #     servicePort: 80
